Updated the demonstation copy.

--- a/app-region-drag-mouse-events/src/draggable.html
+++ b/app-region-drag-mouse-events/src/draggable.html
@@ -12,11 +12,25 @@
         }
         body{
             background-color: #979797;
+            padding:0;
+            margin: 0;
+            font-family: Helvetica Neue, Helvetica, Arial;
+            font-size: 11px;
+            overflow: hidden;
+        }
+        .panel{
+            margin:10px;
         }
     </style>
 </head>
 <body>
 <div id="toolbar" class="draggable">Toolbar</div>
-<p>content</p>
+<div class="panel">
+    <p>This is a frameless child window. </p>
+    <p>It is a child window of the main app. </p>
+    <p>Close the main app and I will also close.</p>
+    <p>This is the default behavior and requires no additional code.</p>
+
+</div>
 </body>
 </html>
