Added the app creation and returning the window as a promise.

--- a/closing-events-child-windows/src/index.html
+++ b/closing-events-child-windows/src/index.html
@@ -8,6 +8,7 @@
    <!--<button id = "removeBoundsChanged">Remove Bounds Changed Listener</button>-->
    <button id = "listWindows">List Windows</button>
    <button id = "addWin">Add Window</button>
+   <button id = "addApp">Add Application</button>
     <p id="message"></p>
     <p>See: <a href="http://cdn.openfin.co/jsdocs/stable/tutorial-window.addEventListener.html">http://cdn.openfin.co/jsdocs/stable/tutorial-window.addEventListener.html</a><br />
     for documentation on EventListeners.
@@ -21,4 +22,5 @@
 </html>
 <script src="js/OpenFinEventListeners.js"></script>
 <script src="js/ExternalWindow.js"></script>
+<script src="js/ExternalApp.js"></script>
 <script src="js/index.js"></script>
