Added html files for child windows.

--- a/closing-events-child-windows/src/childwindow.html
+++ b/closing-events-child-windows/src/childwindow.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
 <body>
 <p>I am a child window</p>
 
