Started to implement the window application display.

--- a/closing-events-child-windows/src/childapp.html
+++ b/closing-events-child-windows/src/childapp.html
@@ -5,8 +5,13 @@
     <title></title>
 </head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://localhost:5070/css/app.css">
 
 <body>
-<p>I am a child application</p>
+<div class="content app">
+    <h4>I am Application</h4>
+    <p>Although I have been created, programmatically, by the main application, once I have been created I am independent of the application which created me and I will not automatically close when the parent app is closed.</p>
+
+</div>
 </body>
 </html>
