--- a/closing-events-child-windows/src/index.html
+++ b/closing-events-child-windows/src/index.html
@@ -1,8 +1,10 @@
 <html>
 <head></head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://localhost:5070/css/app.css">
+
 <body>
-<div id="content">
+<div class="content">
    <button id = "closeButton">Close</button>
    <!--<button id = "removeAllListeners">Remove All Listeners</button>-->
    <!--<button id = "removeBoundsChanged">Remove Bounds Changed Listener</button>-->
@@ -17,6 +19,8 @@
     <p>See: <a href="http://cdn.openfin.co/jsdocs/stable/tutorial-application.getChildWindows.html">http://cdn.openfin.co/jsdocs/stable/tutorial-application.getChildWindows.html</a><br />
         for documentation on ChildWindows.
     </p>
+    <div id = "win-display" class="display window-display"></div>
+    <div id = "app-display" class="display app-display"></div>
 </div>
 </body>
 </html>
