--- a/tear-out-windows/src/index.html
+++ b/tear-out-windows/src/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 <div class="content">
-    <h2>Drag and Drop</h2>
+    <h1>Drag and Drop</h1>
     <p>Showing the external windows reveals the hidden windows waiting to receive the dragged window's content.</p>
     <button id="show-external">Show external windows</button>
     <button id="hide-external">Hide external windows</button>
