Minor changes to tear-out index.html.

--- a/tear-out-windows/src/index.html
+++ b/tear-out-windows/src/index.html
@@ -14,10 +14,11 @@
     <button id="show-external">Show external windows</button>
     <button id="hide-external">Hide external windows</button>
     <div class="dropzone">
-        <div class="dragger" draggable="true"><i class="fa fa-arrows-alt"></i> I can be dragged</div>
-        <div class="dragger" draggable="true"><i class="fa fa-arrows-alt"></i> I can be dragged</div>
-        <div class="dragger" draggable="true"><i class="fa fa-arrows-alt"></i> I can be dragged</div>
-        <div class="dragger" draggable="true"><i class="fa fa-arrows-alt"></i> I can be dragged</div>
+        <div class="dragger" draggable="true"><i class="fa fa-arrows-alt"></i> 0: I can be dragged</div>
+        <div class="dragger" draggable="true"><i class="fa fa-arrows-alt"></i> 1: I can be dragged</div>
+        <div class="dragger" draggable="true"><i class="fa fa-arrows-alt"></i> 2: I can be dragged</div>
+        <div class="dragger" draggable="true"><i class="fa fa-arrows-alt"></i> 3: I can be dragged</div>
+        <div class="dragger" draggable="true"><i class="fa fa-arrows-alt"></i> 4: I can be dragged</div>
     </div>
 
 </div>
