--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Openfin-examples-windowing</h1>
-      <h2 class="project-tagline">OpenFin Examples of Windowing</h2>
+      <h1 class="project-name">Openfin windowing</h1>
+      <h2 class="project-tagline">Examples utilising OpenFin’s Windowing API.</h2>
       <a href="https://github.com/openfin/openfin-examples-windowing" class="btn">View on GitHub</a>
       <a href="https://github.com/openfin/openfin-examples-windowing/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/openfin/openfin-examples-windowing/tarball/master" class="btn">Download .tar.gz</a>
@@ -20,29 +20,40 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The OpenFin Window API</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>OpenFin’s Windowing API offers granular control over the creation, positioning, minimization, maximization and a host of other properties, across multiple monitors, allowing you create rich desktop applications. The full API may be found <a href="http://cdn.openfin.co/jsdocs/stable/fin.desktop.module_Window.html" target="_blank">here.</a></p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="draggable-regions" class="anchor" href="#draggable-regions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Draggable Regions</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>This example shows how to implement draggable regions on frameless windows and how to avoid some of the pitfalls which may arise from the draggable region’s prevention of standard mouse events.</p>
+<p><a href="https://github.com/openfin/openfin-examples-windowing/tree/master/app-region-drag-mouse-events" target="_blank">https://github.com/openfin/openfin-examples-windowing/tree/master/app-region-drag-mouse-events</a></p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="closing-events" class="anchor" href="#closing-events" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Closing Events and Child Windows</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>OpenFin allows the creation of two types of window – child windows and applications. This example demonstrates the differences between the two and how closing of parent and child windows may be controlled.</p>
+<p><a href="https://github.com/openfin/openfin-examples-windowing/tree/master/closing-events-child-windows" target="_blank">https://github.com/openfin/openfin-examples-windowing/tree/master/closing-events-child-windows</a></p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Snapping and Docking</h3>
+
+<p>If you wish to implement window docking we have produced a library which may be used as-is or modified for specific behaviour at <a href="https://github.com/openfin/snap-and-dock" target="_blank">https://github.com/openfin/snap-and-dock</a></p>
+<p>An annotated implementation of the Snap and Dock library may be found here: <a href="https://github.com/openfin/openfin-examples-windowing/tree/master/openfin-windowdocking" target="_blank">https://github.com/openfin/openfin-examples-windowing/tree/master/openfin-windowdocking</a></p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tear-out Windows</h3>
+
+<p>OpenFin allows elements to be apparently ‘torn out’ of one window and placed on the desktop or dropped into another window. This example shows how the effect may be achieved.</p>
+<p><a href="https://github.com/openfin/openfin-examples-windowing/tree/master/tear-out-windows" target="_blank">https://github.com/openfin/openfin-examples-windowing/tree/master/tear-out-windows</a></p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Alpha Transparency</h3>
+
+<p>NB: this a a Beta feature. It is possible to set a specific colour to be an alpha channel allowing transparent windows. </p>
+<p><a href="https://github.com/openfin/openfin-examples-windowing/tree/master/window-alpha-beta" target="_blank">https://github.com/openfin/openfin-examples-windowing/tree/master/window-alpha-beta</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/openfin/openfin-examples-windowing">Openfin-examples-windowing</a> is maintained by <a href="https://github.com/openfin">openfin</a>.</span>
