Capitalised F in Fin.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Openfin windowing</h1>
+      <h1 class="project-name">OpenFin windowing</h1>
       <h2 class="project-tagline">Examples utilising OpenFin’s Windowing API.</h2>
       <a href="https://github.com/openfin/openfin-examples-windowing" class="btn">View on GitHub</a>
       <a href="https://github.com/openfin/openfin-examples-windowing/zipball/master" class="btn">Download .zip</a>
