Cleanup copy and links

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">OpenFin windowing</h1>
-      <h2 class="project-tagline">Examples utilising OpenFin’s Windowing API.</h2>
+      <h1 class="project-name">OpenFin Windowing</h1>
+      <h2 class="project-tagline">Examples utilizing OpenFin’s Windowing API</h2>
       <a href="https://github.com/openfin/openfin-examples-windowing" class="btn">View on GitHub</a>
       <a href="https://github.com/openfin/openfin-examples-windowing/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/openfin/openfin-examples-windowing/tarball/master" class="btn">Download .tar.gz</a>
@@ -23,38 +23,35 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The OpenFin Window API</h3>
 
-<p>OpenFin’s Windowing API offers granular control over the creation, positioning, minimization, maximization and a host of other properties, across multiple monitors, allowing you create rich desktop applications. The full API may be found <a href="http://cdn.openfin.co/jsdocs/stable/fin.desktop.module_Window.html" target="_blank">here.</a></p>
+<p>OpenFin’s Windowing API offers granular control over the creation, positioning, minimization, maximization and a host of other properties, across multiple monitors, allowing you create rich desktop applications. The full API may be found <a href="http://cdn.openfin.co/jsdocs/stable/fin.desktop.module_Window.html" target="_blank">here</a>.</p>
 
 
 <h3>
 <a id="draggable-regions" class="anchor" href="#draggable-regions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Draggable Regions</h3>
 
 <p>This example shows how to implement draggable regions on frameless windows and how to avoid some of the pitfalls which may arise from the draggable region’s prevention of standard mouse events.</p>
-<p><a href="https://github.com/openfin/openfin-examples-windowing/tree/master/app-region-drag-mouse-events" target="_blank">https://github.com/openfin/openfin-examples-windowing/tree/master/app-region-drag-mouse-events</a></p>
+<p>Check it out <a href="https://github.com/openfin/openfin-examples-windowing/tree/master/app-region-drag-mouse-events" target="_blank">here</a>.</p>
 
 <h3>
 <a id="closing-events" class="anchor" href="#closing-events" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Closing Events and Child Windows</h3>
 
-<p>OpenFin allows the creation of two types of window – child windows and applications. This example demonstrates the differences between the two and how closing of parent and child windows may be controlled.</p>
-<p><a href="https://github.com/openfin/openfin-examples-windowing/tree/master/closing-events-child-windows" target="_blank">https://github.com/openfin/openfin-examples-windowing/tree/master/closing-events-child-windows</a></p>
+<p>OpenFin allows the creation of two types of windows–child windows and applications. <a href="https://github.com/openfin/openfin-examples-windowing/tree/master/closing-events-child-windows" target="_blank">This example</a> demonstrates the differences between the two, and how closing of parent and child windows may be controlled.</p>
 
 <h3>
 <a id="snapping-and-docking" class="anchor" href="#snapping-and-docking" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Snapping and Docking</h3>
 
-<p>If you wish to implement window docking we have produced a library which may be used as-is or modified for specific behaviour at <a href="https://github.com/openfin/snap-and-dock" target="_blank">https://github.com/openfin/snap-and-dock</a></p>
-<p>An annotated implementation of the Snap and Dock library may be found here: <a href="https://github.com/openfin/openfin-examples-windowing/tree/master/openfin-windowdocking" target="_blank">https://github.com/openfin/openfin-examples-windowing/tree/master/openfin-windowdocking</a></p>
+<p>If you wish to implement window docking, we have produced a library which may be used as-is, or modified for specific behavior <a href="https://github.com/openfin/snap-and-dock" target="_blank">here</a>.</p>
+<p>An annotated implementation of the Snap and Dock library may be found <a href="https://github.com/openfin/openfin-examples-windowing/tree/master/openfin-windowdocking" target="_blank">here</a>.</p>
 
 <h3>
-<a id="tear-out-windows" class="anchor" href="#tear-out-windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tear-out Windows</h3>
+<a id="tear-out-windows" class="anchor" href="#tear-out-windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tear-Out Windows</h3>
 
-<p>OpenFin allows elements to be apparently ‘torn out’ of one window and placed on the desktop or dropped into another window. This example shows how the effect may be achieved.</p>
-<p><a href="https://github.com/openfin/openfin-examples-windowing/tree/master/tear-out-windows" target="_blank">https://github.com/openfin/openfin-examples-windowing/tree/master/tear-out-windows</a></p>
+<p>OpenFin allows elements to be ‘torn out’ of one window and placed on the desktop or dropped into another window. <a href="https://github.com/openfin/openfin-examples-windowing/tree/master/tear-out-windows" target="_blank">This example</a> shows how the effect may be achieved.</p>
 
 <h3>
 <a id="alpha-transparency" class="anchor" href="#alpha-transparency" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Alpha Transparency</h3>
 
-<p>NB: this a a Beta feature. It is possible to set a specific colour to be an alpha channel allowing transparent windows. </p>
-<p><a href="https://github.com/openfin/openfin-examples-windowing/tree/master/window-alpha-beta" target="_blank">https://github.com/openfin/openfin-examples-windowing/tree/master/window-alpha-beta</a></p>
+<p>NB: <a href="https://github.com/openfin/openfin-examples-windowing/tree/master/window-alpha-beta" target="_blank">This is a Beta feature</a>. It is possible to set a specific color to be an alpha channel, allowing transparent windows. </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/openfin/openfin-examples-windowing">Openfin-examples-windowing</a> is maintained by <a href="https://github.com/openfin">openfin</a>.</span>
