Window Sizing & Frameless Window Additions

--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
 <p><a href="https://github.com/openfin/openfin-examples-windowing/tree/master/tear-out-windows" target="_blank">https://github.com/openfin/openfin-examples-windowing/tree/master/tear-out-windows</a></p>
 
 <h3>
+<a id="window-sizing" class="anchor" href="#window-sizing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Window Sizing</h3>
+
+<p>Learn how to set the inner size of the window object to a value. A very simple vanilla.js frameless window demo is located <a href="https://github.com/openfin/demo-window-sizing" target="_blank">here</a>.</p>
+
+<h3>
+<a id="frameless-window" class="anchor" href="#frameless-window" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Frameless Window</h3>
+
+<p>Create a window without a frame, rather than using the frame provided by the native windowing environment. <a href="https://github.com/openfin/demo-frameless-window" target="_blank">This demo</a> shows you how to create a frameless window, and also the option to make it movable.</p>
+
+<h3>
 <a id="alpha-transparency" class="anchor" href="#alpha-transparency" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Alpha Transparency</h3>
 
 <p>NB: this a a Beta feature. It is possible to set a specific colour to be an alpha channel allowing transparent windows. </p>
