remove reference to deprecated defineDraggableArea function

--- a/app-region-drag-mouse-events/src/draggable.html
+++ b/app-region-drag-mouse-events/src/draggable.html
@@ -10,6 +10,9 @@
             width: 95%;
             display: inline-block;
         }
+        .draggable{
+            -webkit-app-region: drag;
+        }
         body{
             background-color: #979797;
             padding:0;
@@ -30,7 +33,6 @@
     <p>It is a child window of the main app. </p>
     <p>Close the main app and I will also close.</p>
     <p>This is the default behavior and requires no additional code.</p>
-
 </div>
 </body>
 </html>
