--- a/app-region-drag-mouse-events/src/index.html
+++ b/app-region-drag-mouse-events/src/index.html
@@ -10,10 +10,7 @@
 
 
 <div id="dragger">
-    <div id="nested-box" class="listened noselect">I'm nested so mouseleave Events are caught by my parent DIV.</div>
-    <div class="fixed-pos-container" >
-        <div class="listened noselect" id="closer">Click to close</div>
-    </div>
+  <div class="listened noselect" id="closer">Click to close</div>
 </div>
 <div id="main">
 
@@ -24,13 +21,10 @@
   <div class="listened noselect">I will turn blue when I receive a mouseleave Event</div>
 </div>
 <div class="noselect" id="copy">
-    <h1>Draggable areas and mouse Events</h1>
-    <p>The purpose of this example is to show how setting a draggable area on a frameless window will affect mouse Events for nested and overlapping elements.</p>
-    <p>We will set the app's draggable area - the DOM element with an id of 'toolbar' - adding the CSS property of <pre>-webkit-app-region: drag;</pre></p>
-    <p>This CSS makes the DIV into our window dragger, however, property prevents some of the standard mouse Events firing.</p>
-    <p>The initial state of the DOM Elements with mouse listeners is orange and they have the CSS property '-webkit-app-region: no-drag;' to allow them to receive mouse Events, even when nested in a 'drag' region . When they receive a 'mouseover' they turn red and a 'mouseleave' turns them blue.</p>
-    <p>You will see that dragging the mouse to any of the orange elements highlights them in red, including the furthest left div nested in the draggable top-bar. If, however, the mouse leaves the nested element via the grey, draggable, top bar the 'mouseleave' Event will be prevented and the element will not turn blue.</p>
-    <p>We counter this on the top right element by nesting it within a DIV with its CSS set to '-webkit-app-region: no-drag;' (the initially pink area) and padding of 4px. When the mouse leaves the orange DIV it must pass over the 4px border of the 'no-drag' region, thus allowing a mouse Event to be dispatched before it enters the mouse-event-cancelling 'drag' zone.</p>
+    <h1>Draggable Areas and Mouse Events</h1>
+    <p>The purpose of this demonstration is to show how to create mouseover events and draggable areas on frameless windows by setting the CSS property of <pre>-webkit-app-region: drag;</pre>.</p>
+    <p>We will set the app's draggable area on the DOM element with an id of 'toolbar'.</p>
+    <p>The initial state of the DOM Elements with mouse listeners is orange and they have the CSS property '-webkit-app-region: no-drag;' to allow them to receive mouse Events, even when nested in a 'drag' region. When they receive a 'mouseover' they turn red and a 'mouseleave' turns them blue.</p>
 </div>
 </body>
 </html>
